--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@
     </div>
   </div>
   <h1 class="signature">From: Wilhelm Ayapana</h2>
+
+
+    <script>
+      document.addEventListener("click", function () {
+        document.getElementById("bg-music").play();
+      });
+    </script>
+    <audio id="bg-music" loop>
+      <source src="nobody.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    
   <script>
     const starsContainer = document.querySelector(".stars");
     for (let i = 0; i < 200; i++) {
